[package]
authors = ["KinakoExE"]
edition = "2018"
name = "rust-basic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "impl-example"
path = "src/impl-example.rs"

[[bin]]
name = "method-chain"
path = "src/method-chain.rs"
