[package]
authors = ["KinakoExE"]
edition = "2018"
name = "rust-basic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "impl-example"
path = "src/impl-example.rs"

[[bin]]
name = "method-chain"
path = "src/method-chain.rs"

[[bin]]
name = "macro"
path = "src/macro.rs"

[[bin]]
name = "assertion"
path = "src/assertion.rs"

[[bin]]
name = "trait-derive"
path = "src/trait-derive.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[[bin]]
name = "thread"
path = "src/thread.rs"

[[bin]]
name = "shared-memory"
path = "src/shared-memory.rs"
